--- a/modules/odr_frontend/docker/Dockerfile.frontend.dev
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.dev
@@ -5,6 +5,16 @@ WORKDIR /app
 # Install pnpm
 RUN npm install -g pnpm
 
+# Install aws-cli
+RUN apk add --no-cache aws-cli
+
+# Install s3fs-fuse for mounting S3 bucket, remove if using mount point
+RUN apk add --no-cache s3fs-fuse
+
+# Prepare for the AWS
+RUN mkdir -p /mnt/upload
+RUN mkdir -p /mnt/models
+
 # Copy package.json and pnpm-lock.yaml (if you have one)
 COPY package.json pnpm-lock.yaml* ./
 
