--- a/modules/odr_frontend/docker/Dockerfile.frontend.dev
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.dev
@@ -8,8 +8,7 @@ RUN npm install -g pnpm
 # Install aws-cli
 RUN apk add --no-cache aws-cli
 
-# Install s3fs-fuse for mounting S3 bucket, remove if using mount point
-RUN apk add --no-cache s3fs-fuse
+RUN apk add --no-cache efs-utils
 
 # Prepare for the AWS
 RUN mkdir -p /mnt/upload
