Enabled deploy workflow to run on 138-create-cdk-deployment-pipeline branch for debug purposes.
Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

--- a/.github/workflows/build-and-deploy-aws.yml
+++ b/.github/workflows/build-and-deploy-aws.yml
@@ -2,8 +2,8 @@
 name: Build and Deploy to AWS
 
 on:
-  # push:
-  #   branches: [ main ]
+  push:
+    branches: [ 138-create-cdk-deployment-pipeline ]
   # pull_request:
   #   branches: [ main ]
   workflow_dispatch:
