--- a/.github/workflows/build-and-deploy-aws.yml
+++ b/.github/workflows/build-and-deploy-aws.yml
@@ -2,8 +2,8 @@
 name: Build and Deploy to AWS
 
 on:
-  push:
-    branches: [ 138-create-cdk-deployment-pipeline ]
+  # push:
+  #   branches: [ main ]
   # pull_request:
   #   branches: [ main ]
   workflow_dispatch:
@@ -73,7 +73,7 @@ jobs:
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-    # if: github.event_name == 'workflow_dispatch' && github.event.inputs.deployment_type != 'none'
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.deployment_type != 'none'
 
     steps:
     - name: Checkout repository
@@ -88,7 +88,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'
+        node-version: '22'
 
     - name: Install CDK dependencies
       working-directory: cdk
@@ -97,14 +97,14 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
 
-    # - name: Deploy all stacks
-    #   if: github.event.inputs.deployment_type == 'all'
-    #   working-directory: cdk
-    #   run: |
-    #     cdk deploy --all --require-approval never
+    - name: Deploy all stacks
+      if: github.event.inputs.deployment_type == 'all'
+      working-directory: cdk
+      run: |
+        cdk deploy --all --require-approval never
 
     - name: Deploy app stack only
-      # if: github.event.inputs.deployment_type == 'app-only'
+      if: github.event.inputs.deployment_type == 'app-only'
       working-directory: cdk
       run: |
         cdk deploy EcsStack --require-approval never
