--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -36,13 +36,13 @@
 		"prettier": "^3.5.1",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^4.2.19",
-		"svelte-check": "^3.8.6",
+		"svelte-check": "^4.1.4",
 		"sveltekit-superforms": "^2.23.1",
 		"tailwindcss": "3.4.10",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.24.0",
 		"vite": "^5.4.14",
-		"vite-plugin-tailwind-purgecss": "0.3.3",
+		"vite-plugin-tailwind-purgecss": "^0.3.5",
 		"vitest": "^2.1.9",
 		"zod": "^3.24.2"
 	},
@@ -54,7 +54,6 @@
 		"@aws-sdk/client-s3": "^3.749.0",
 		"@floating-ui/dom": "1.6.10",
 		"highlight.js": "11.10.0",
-		"next-auth": "^4.24.11",
 		"pg": "^8.13.3",
 		"pnpm": "^9.15.5",
 		"svelte-awesome-icons": "^1.2.1"
