--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -103,7 +103,4 @@ tasks:
   dev:
     desc: Start development environment with odr-api in watch mode and databases headless
     cmds:
-      - docker compose up -d postgres pgadmin
-      - |
-        docker compose up --watch odr-api --build &
-        docker compose up --watch odr-frontend --build
+      - docker compose up --watch --build
