--- a/modules/odr_frontend/docker/Dockerfile.frontend.dev
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.dev
@@ -7,15 +7,16 @@ RUN npm install -g pnpm
 
 # Copy package.json and pnpm-lock.yaml (if you have one)
 COPY package.json pnpm-lock.yaml* ./
-
+# Install dependencies at build time
+RUN pnpm install --frozen-lockfile
 # Copy the entrypoint script
 COPY docker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-COPY .env.template /app/.env
+# COPY .env.template /app/.env
 
 EXPOSE 5173
 
-ENTRYPOINT ["/entrypoint.sh"]
+# ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["pnpm", "run", "dev", "--", "--host", "0.0.0.0"]
