--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -12,7 +12,12 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"db:pull": "drizzle-kit pull",
+		"db:push": "drizzle-kit push:pg",
+		"db:studio": "drizzle-kit studio",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "drizzle-kit migrate"
 	},
 	"devDependencies": {
 		"@playwright/test": "1.50.1",
@@ -28,6 +33,7 @@
 		"@types/pg": "^8.11.11",
 		"autoprefixer": "10.4.20",
 		"dotenv": "^16.4.7",
+		"drizzle-kit": "^0.30.4",
 		"eslint": "^9.20.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -39,6 +45,7 @@
 		"svelte-check": "^4.1.4",
 		"sveltekit-superforms": "^2.23.1",
 		"tailwindcss": "3.4.10",
+		"tsx": "^4.19.3",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.24.0",
 		"vite": "^5.4.14",
@@ -53,6 +60,7 @@
 		"@auth/sveltekit": "^1.7.4",
 		"@aws-sdk/client-s3": "^3.749.0",
 		"@floating-ui/dom": "1.6.10",
+		"drizzle-orm": "^0.39.3",
 		"highlight.js": "11.10.0",
 		"pg": "^8.13.3",
 		"pnpm": "^9.15.5",
