--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
-name: omi-data-repository
+name: odr
 services:
   postgres:
     image: pgvector/pgvector:pg17
