--- a/modules/odr_frontend/docker/Dockerfile.frontend.dev
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.dev
@@ -17,7 +17,7 @@ RUN mkdir -p /mnt/models
 # Copy package.json and pnpm-lock.yaml (if you have one)
 COPY package.json pnpm-lock.yaml* ./
 # Install dependencies at build time
-RUN pnpm install --frozen-lockfile
+RUN pnpm install --frozen-lockfile --ignore-scripts
 # Copy the entrypoint script
 COPY docker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
