--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -14,7 +14,7 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
 		"db:pull": "drizzle-kit pull",
-		"db:push": "drizzle-kit push:pg",
+		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate"
