--- a/modules/odr_frontend/docker/Dockerfile.frontend.dev
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.dev
@@ -2,30 +2,27 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-# Install pnpm
-RUN npm install -g pnpm
-
-# Install aws-cli
-RUN apk add --no-cache aws-cli
-
-RUN apk add --no-cache efs-utils
-
-# Prepare for the AWS
-RUN mkdir -p /mnt/upload
-RUN mkdir -p /mnt/models
+# Install dependencies
+RUN npm install -g pnpm && \
+    apk add --no-cache aws-cli efs-utils postgresql-client && \
+    mkdir -p /mnt/upload /mnt/models
 
 # Copy package.json and pnpm-lock.yaml (if you have one)
 COPY package.json pnpm-lock.yaml* ./
 # Install dependencies at build time
 RUN pnpm install --frozen-lockfile --ignore-scripts
+
 # Copy the entrypoint script
 COPY docker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+# Copy drizzle migration files
+COPY drizzle/ /app/drizzle/
+COPY src/db/ /app/src/db/
 
 # COPY .env.template /app/.env
 
 EXPOSE 5173
 
-# ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["pnpm", "run", "dev", "--", "--host", "0.0.0.0"]
