--- a/modules/odr_api/docker/Dockerfile.api
+++ b/modules/odr_api/docker/Dockerfile.api
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     exiftool \
     awscli \
     s3fs \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 ENV PYTHONUNBUFFERED=1 \
@@ -16,16 +17,6 @@ ENV PYTHONUNBUFFERED=1 \
     PIP_DEFAULT_TIMEOUT=100
 
 WORKDIR /app
-
-# # Install aws-cli
-# RUN pip install --no-cache-dir awscli
-
-# # Install s3fs-fuse for mounting S3 bucket
-# RUN apt-get install s3fs
-
-# Prepare for the AWS
-RUN mkdir -p /mnt/upload
-RUN mkdir -p /mnt/models
 
 # Copy requirements file
 COPY modules/odr_api/requirements.txt .
