--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,8 +46,8 @@ services:
 
   odr-frontend:
     build:
-      context: ./modules/odr_frontend
-      dockerfile: docker/Dockerfile.frontend.dev
+      context: .
+      dockerfile: modules/odr_frontend/docker/Dockerfile.frontend.dev
     volumes:
       - ./modules/odr_frontend:/app
       - odr_frontend_node_modules:/app/node_modules
