Separate sign in buttons out into components, improve some styling and interactability on the footer and banner, and improve some styles on the auth page. Also add missing spdx-license-identifier information for all .svelte files and fix pre-commit check for them.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,5 +19,5 @@ repos:
         name: Check SPDX License Headers
         entry: python ./scripts/check_spdx.py
         language: python
-        types_or: [python, javascript, jsx, ts, tsx, shell, batch, html, xml, yaml]
-        files: \.(py|js|ts|sh|bat|cmd|html|xml|yaml|yml)$
+        types_or: [python, javascript, jsx, ts, tsx, shell, svelte, batch, html, xml, yaml]
+        files: \.(py|js|ts|sh|svelte|bat|cmd|html|xml|yaml|yml)$
