Fixes to aws infrastructure (#185)
* Added missing permissions to secrets. Added health endpoint.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Fixed typo in vite.config.ts

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Added health checks.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Fixed typos causing cdk pipeline to fail.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Now deploying with specific tag image instead with latest image.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Removed invalid parameters.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Fixed hostname env variable.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Updates to docker image.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Fixed invalid path in github deploy workflow.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Copy whole app instead in frontend docker image.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Added missing env variable for frontend.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Added missing secret AUTH_SECRET to frontend.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Added more logging. Added missing path to the API_SERVICE_URL env variable.

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Changes to cdk

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Increased resources for frontend

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

* Commented out health check

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

---------

Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>
Signed-off-by: Tomasz Staniewski <tomislaw2.0@gmail.com>

--- a/.github/workflows/build-and-deploy-aws.yml
+++ b/.github/workflows/build-and-deploy-aws.yml
@@ -54,7 +54,7 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:latest -f modules/odr_frontend/docker/Dockerfile.frontend.dev modules/odr_frontend
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:latest -f modules/odr_frontend/docker/Dockerfile.frontend.dev .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:latest
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG" >> $GITHUB_OUTPUT
@@ -101,10 +101,10 @@ jobs:
       if: github.event.inputs.deployment_type == 'all'
       working-directory: cdk
       run: |
-        cdk deploy --all --require-approval never
+        cdk deploy --all --require-approval never --context backendImageTag=${{ github.sha }} --context frontendImageTag=${{ github.sha }}
 
     - name: Deploy app stack only
       if: github.event.inputs.deployment_type == 'app-only'
       working-directory: cdk
       run: |
-        cdk deploy EcsStack --require-approval never
+        cdk deploy EcsStack --require-approval never --context backendImageTag=${{ github.sha }} --context frontendImageTag=${{ github.sha }}
