--- a/modules/odr_core/Taskfile.core.yml
+++ b/modules/odr_core/Taskfile.core.yml
@@ -1,17 +1,10 @@
 # SPDX-License-Identifier: Apache-2.0
-# aidriver_stores Taskfile
-version: "3"
+version: '3'
 tasks:
   default:
     desc: List all the tasks
     cmds:
       - task --list
-
-  install:
-    desc: Install the package in editable mode
-    dir: modules/odr_core
-    cmds:
-      - pip install -e .
 
   test:
     desc: Run tests for the core module
