Fix issues with monitoring lint and format tasks, remove invalid activate-venv task, and restore install-dev frontend task.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_frontend/Taskfile.frontend.yml
+++ b/modules/odr_frontend/Taskfile.frontend.yml
@@ -7,7 +7,14 @@ tasks:
     cmds:
       - task --list
 
-  test:
+  install-dev:
+    desc: Install development dependencies
+    dir: modules/odr_frontend
+    cmds:
+      - pnpm install --dev
+      - pnpm exec playwright install
+
+  test-all:
     desc: Run unit and integration tests
     cmds:
       - task: test-unit
