--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -22,49 +22,50 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "1.50.1",
+		"@rollup/rollup-linux-x64-gnu": "^4.40.1",
 		"@skeletonlabs/skeleton": "2.10.2",
 		"@skeletonlabs/tw-plugin": "0.4.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.20.6",
+		"@sveltejs/kit": "^2.20.8",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/forms": "0.5.7",
 		"@tailwindcss/typography": "0.5.14",
 		"@types/eslint": "^9.6.1",
 		"@types/node": "22.2.0",
-		"@types/pg": "^8.11.11",
+		"@types/pg": "^8.11.14",
 		"autoprefixer": "10.4.20",
-		"dotenv": "^16.4.7",
-		"drizzle-kit": "^0.30.4",
-		"eslint": "^9.20.1",
+		"dotenv": "^16.5.0",
+		"drizzle-kit": "^0.30.6",
+		"eslint": "^9.26.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.15.0",
 		"postcss": "8.4.41",
-		"prettier": "^3.5.1",
+		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^4.2.19",
-		"svelte-check": "^4.1.4",
-		"sveltekit-superforms": "^2.23.1",
+		"svelte-check": "^4.1.7",
+		"sveltekit-superforms": "^2.25.0",
 		"tailwindcss": "3.4.10",
-		"tsx": "^4.19.3",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.24.0",
+		"tsx": "^4.19.4",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.31.1",
 		"vite": "^5.4.19",
 		"vite-plugin-tailwind-purgecss": "^0.3.5",
 		"vitest": "^2.1.9",
-		"zod": "^3.24.2"
+		"zod": "^3.24.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@auth/core": "^0.35.3",
-		"@auth/pg-adapter": "^1.7.4",
-		"@auth/sveltekit": "^1.7.4",
-		"@aws-sdk/client-s3": "^3.749.0",
+		"@auth/pg-adapter": "^1.9.0",
+		"@auth/sveltekit": "^1.9.1",
+		"@aws-sdk/client-s3": "^3.802.0",
 		"@floating-ui/dom": "1.6.10",
 		"drizzle-orm": "^0.39.3",
 		"highlight.js": "11.10.0",
-		"pg": "^8.13.3",
-		"pnpm": "^10.0.0",
+		"pg": "^8.15.6",
+		"pnpm": "^10.10.0",
 		"svelte-awesome-icons": "^1.2.1"
 	}
 }
