--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -23,11 +23,11 @@
 	"devDependencies": {
 		"@playwright/test": "1.50.1",
 		"@rollup/rollup-linux-x64-gnu": "^4.40.1",
-		"@skeletonlabs/skeleton": "2.10.2",
+		"@skeletonlabs/skeleton": "3.1.3",
 		"@skeletonlabs/tw-plugin": "0.4.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.20.8",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "0.5.7",
 		"@tailwindcss/typography": "0.5.14",
 		"@types/eslint": "^9.6.1",
@@ -43,15 +43,14 @@
 		"postcss": "8.4.41",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^4.2.19",
+		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.7",
 		"sveltekit-superforms": "^2.25.0",
-		"tailwindcss": "3.4.10",
+		"tailwindcss": "4.1.5",
 		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.31.1",
-		"vite": "^5.4.19",
-		"vite-plugin-tailwind-purgecss": "^0.3.5",
+		"vite": "^6.3.4",
 		"vitest": "^2.1.9",
 		"zod": "^3.24.3"
 	},
@@ -62,6 +61,7 @@
 		"@auth/sveltekit": "^1.9.1",
 		"@aws-sdk/client-s3": "^3.802.0",
 		"@floating-ui/dom": "1.6.10",
+		"@tailwindcss/postcss": "^4.1.5",
 		"drizzle-orm": "^0.39.3",
 		"highlight.js": "11.10.0",
 		"pg": "^8.15.6",
