--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -23,8 +23,7 @@
 	"devDependencies": {
 		"@playwright/test": "1.50.1",
 		"@rollup/rollup-linux-x64-gnu": "^4.40.1",
-		"@skeletonlabs/skeleton": "3.1.3",
-		"@skeletonlabs/tw-plugin": "0.4.0",
+		"@skeletonlabs/skeleton": "^3.1.3",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.20.8",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -61,6 +60,7 @@
 		"@auth/sveltekit": "^1.9.1",
 		"@aws-sdk/client-s3": "^3.802.0",
 		"@floating-ui/dom": "1.6.10",
+		"@skeletonlabs/skeleton": "^3.1.3",
 		"@tailwindcss/postcss": "^4.1.5",
 		"drizzle-orm": "^0.39.3",
 		"highlight.js": "11.10.0",
