--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -61,6 +61,7 @@
 		"@aws-sdk/client-s3": "^3.802.0",
 		"@floating-ui/dom": "1.6.10",
 		"@skeletonlabs/skeleton": "^3.1.3",
+		"@skeletonlabs/skeleton-svelte": "^1.2.1",
 		"@tailwindcss/postcss": "^4.1.5",
 		"drizzle-orm": "^0.39.3",
 		"highlight.js": "11.10.0",
