Set VS Code tab size to 2.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "open-model-initiative",
         "projectKey": "Open-Model-Initiative_OMI-Data-Pipeline"
-    }
+    },
+    "editor.tabSize": 2
 }
