--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -39,7 +39,6 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.15.0",
-		"postcss": "8.4.41",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.28.2",
@@ -62,7 +61,7 @@
 		"@floating-ui/dom": "1.6.10",
 		"@skeletonlabs/skeleton": "^3.1.3",
 		"@skeletonlabs/skeleton-svelte": "^1.2.1",
-		"@tailwindcss/postcss": "^4.1.6",
+		"@tailwindcss/vite": "^4.1.6",
 		"drizzle-orm": "^0.39.3",
 		"highlight.js": "11.10.0",
 		"pg": "^8.15.6",
