--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -59,6 +59,7 @@
 		"@auth/sveltekit": "^1.9.1",
 		"@aws-sdk/client-s3": "^3.802.0",
 		"@floating-ui/dom": "1.6.10",
+		"@lucide/svelte": "^0.511.0",
 		"@skeletonlabs/skeleton": "^3.1.3",
 		"@skeletonlabs/skeleton-svelte": "^1.2.1",
 		"@tailwindcss/vite": "^4.1.6",
