--- a/modules/odr_frontend/docker/Dockerfile.frontend.dev
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.dev
@@ -1,20 +1,32 @@
 FROM node:22-alpine
-
 WORKDIR /app
+
+# Accept build arguments
+ARG VITE_GIT_BRANCH
+ARG VITE_GIT_COMMIT
+ARG VITE_BUILD_TIME
+ARG VITE_APP_VERSION
+
+# Set as environment variables
+ENV VITE_GIT_BRANCH=$VITE_GIT_BRANCH
+ENV VITE_GIT_COMMIT=$VITE_GIT_COMMIT
+ENV VITE_BUILD_TIME=$VITE_BUILD_TIME
+ENV VITE_APP_VERSION=$VITE_APP_VERSION
 
 # Install dependencies
 RUN npm install -g pnpm && \
     apk add --no-cache aws-cli efs-utils postgresql-client && \
     mkdir -p /mnt/upload /mnt/models
 
-
 # Copy package.json and pnpm-lock.yaml (if you have one)
 COPY modules/odr_frontend/package.json modules/odr_frontend/pnpm-lock.yaml* ./
+
 # Install dependencies at build time
 RUN pnpm install --frozen-lockfile --ignore-scripts
 
 # Copy the entrypoint script
 COPY modules/odr_frontend/docker/entrypoint.sh /entrypoint.sh
+
 # Ensure the entrypoint script has the correct line endings and is executable
 RUN sed -i 's/\r$//' /entrypoint.sh && \
     chmod +x /entrypoint.sh
@@ -22,7 +34,5 @@ RUN sed -i 's/\r$//' /entrypoint.sh && \
 COPY modules/odr_frontend/ /app/
 
 EXPOSE 5173
-
 ENTRYPOINT ["/entrypoint.sh"]
-
 CMD ["pnpm", "run", "dev", "--", "--host", "0.0.0.0"]
