--- a/modules/odr_frontend/docker/Dockerfile.frontend.prod
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.prod
@@ -1,8 +1,19 @@
 # Build stage
 ### STUB : Not verified ####
 FROM node:22-alpine AS builder
-
 WORKDIR /app
+
+# Accept build arguments
+ARG VITE_GIT_BRANCH
+ARG VITE_GIT_COMMIT
+ARG VITE_BUILD_TIME
+ARG VITE_APP_VERSION
+
+# Set as environment variables
+ENV VITE_GIT_BRANCH=$VITE_GIT_BRANCH
+ENV VITE_GIT_COMMIT=$VITE_GIT_COMMIT
+ENV VITE_BUILD_TIME=$VITE_BUILD_TIME
+ENV VITE_APP_VERSION=$VITE_APP_VERSION
 
 # Install pnpm
 RUN npm install -g pnpm
