Align prod dockerfile with dev and use it, see if cookie settings help and add some debugs to ensure variables are set.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.github/workflows/build-and-deploy-aws.yml
+++ b/.github/workflows/build-and-deploy-aws.yml
@@ -68,7 +68,7 @@ jobs:
           --build-arg VITE_APP_VERSION="${{ env.VITE_APP_VERSION }}" \
           -t $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG \
           -t $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:latest \
-          -f modules/odr_frontend/docker/Dockerfile.frontend.dev .
+          -f modules/odr_frontend/docker/Dockerfile.frontend.prod .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:latest
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG" >> $GITHUB_OUTPUT
